fixed temperature spacing for mobile display

--- a/src/styles.css
+++ b/src/styles.css
@@ -120,5 +120,4 @@ footer {
 
 .weather-forecast-temperature-min {
   opacity: 0.5;
-  margin-left: 15px;
 }
